# agent-service-sandbox

./: .dockerignore  .flake8  .gitignore  .prefectignore  Dockerfile  Jenkinsfile  Makefile  Pipfile  README.md  application.py  build_and_push_image.sh  build_and_push_test_image.sh  bump_version.sh  cron_scheduler_worker.py  definitions.py  main_prompt.txt  no_auth_endpoints.py  prefect_serve.py  prefect_sqs_serve.py  pull_request_template.md  pyproject.toml  quality_agent_ingestion_worker.py  run_plan_task.py  run_regression.sh  sqs_execute.py  stocks.pkl  tasks.py  test.dockerfile
agent_service/: agent_service_impl.py  io_type_utils.py  io_types.py  tool.py  types.py  unit_test_util.py  uploads.py
agent_service/GPT/: constants.py  requests.py  tokens.py  utils.py
agent_service/agent_quality_worker/: constants.py  ingestion_worker.py  jira_integration.py  models.py
agent_service/canned_prompts/: canned_prompts.py
agent_service/chatbot/: chatbot.py  prompts.py
agent_service/endpoints/: authz_helper.py  models.py  utils.py
agent_service/io_types/: __init__.py  citations.py  dates.py  graph.py  idea.py  layout.py  misc.py  output.py  stock.py  stock_aligned_text.py  stock_groups.py  table.py  text.py  text_objects.py
agent_service/planner/: action_decide.py  constants.py  errors.py  (+7 more)
config/: config-alpha.toml  config-local.toml
regression_test/: expected_plans.py  test_custom_docs.py  test_data.py  test_earnings.py  test_home_screen_queries.py  test_hypothesis.py  test_iterative_pipelines.py  test_kpi.py  test_llm_analysis.py  test_market_commentary.py  test_portfolio_monitoring.py  test_regression.py  test_sec_filings.py  test_sqs_message_handler.py  test_stock_rank.py  test_stock_screener.py  test_web_search.py  util.py
scripts/: backfill.py  benchmark_agent_output.py  bulk_rerun_agents.py  clear_clickhouse_events_table.py  create_agent_offline.py  create_template_recommendations.py  hypothesis_past_runs.py  hypothesis_run_diffs.py  kickoff_sec_filings_ingest.py  modify_sample_plans.py  notification_tester.py  notify_llm_costs.py  notify_regression_tests.py  populate_embedding.py  query_scoring.py  run_agent_offline.py  run_plan_historical_updates.py  run_plan_run_locally.py  run_plan_sqs_handler.py  run_plan_task.py  run_scheduled_agents.py  sample_plans_upsert.py  sec_ingest.py  stock_search_cache_warmup.py  subscribe_users_default_strategy.py
tests/: planner_utils.py  skip_commit_boosted_db.py  test_action_decider.py  test_agent_service_impl.py  test_agent_service_impl_base.py  test_async_postgres_base.py  test_chatbot.py  test_enablement.py  test_executor.py  test_feature_data.py  test_ingestion_worker_tiered_allocations.py  test_io_types.py  test_jira_integration.py  test_live_plan_tools.py  test_outputs.py  test_planner.py  test_queries.py  test_sec_filings.py  test_service.py  test_stock_identifier_lookup.py  test_text_objects.py
(+223 files in other folders)
